# xatra

./: .gitignore  GUI_README.md  ISSUE.md  MANIFEST.in  PYPLOT_FEATURE.md  README.md  SEARCH_BOX_INSTRUCTIONS.md  SUMMARY.md  TIME_DEBUGGING.md  colonies_modern.py  download.py  example.py  example_admin.py  example_colorgroups.py  example_data.py  example_dataframe.py  example_disputed.py  example_punjab.py  examples.py  magic.py  magic_old.py  map.html  map.json  map_point_icon.html  map_point_icon.json  mwe.py  playground.py  pyproject.toml  raw_data.py  rdviz.py  setup.py  start_gui.sh  test_admin.py  test_comprehensive.py  test_debug_map.html  test_debug_map.json  test_debug_time.py  test_default_colormap.py  test_enhanced_timing.py  test_ind12.py  (+6 more)
chronologies/: tracts.py
data/: loka_AFG_2.json  loka_BHR_1.json  loka_BRN_2.json  loka_BTN_2.json  loka_EGY_2.json  loka_KAZ_2.json  loka_KWT_1.json  loka_LAO_2.json  loka_NPL_3.json  loka_OMN_2.json  loka_PSE_2.json  loka_SOM_2.json  loka_TLS_2.json  loka_UZB_2.json  varuna_relation_1159233_sindhu.json  varuna_relation_1206456_jaxartes (syr darya).json  varuna_relation_1236345_ganga.json  varuna_relation_12559166_suvarnanadi.json  varuna_relation_13676883_kaushika.json  varuna_relation_15793911_sarayu.json  varuna_relation_2826093_godavari.json  varuna_relation_2858525_bhimarathi.json  varuna_relation_3173475_hari (hari).json  varuna_relation_326077_yamuna.json  varuna_relation_5252846_haetumant (helmand).json  varuna_relation_6608825_kama (kunar).json  varuna_relation_8385364_chambal.json  varuna_way_247787304_campa.json
examples/: magic_afghanish.html  rdviz_afghanish.html
scripts/: DATA_DOWNLOAD.md  build_disputed_mapping.py  build_name_gid_table.py  categorize_disputed_areas.py  combine_rivers.py  disputed_mapping.csv  disputed_mapping.json  disputed_mapping.md  download_gadm.py  fill_level0_gids.py  fill_missing_gids_search.py  fix_remaining_gids.py  upgrade_territory_library.py  verify_gadm.py  visualize_rivers.html
tests/: bla.py  example.py  example_admin.py  example_builtin_icons.py  example_colorgroups.py  example_data.py  example_dataframe.py  example_display_label.py  example_disputed.py  example_geometric_icons.py  test_data.py  (+34 more)
(+248 files in other folders)
