[project]
name = "xatra"
version = "2.14.0"
description = "The matplotlib of maps - create beautiful historical, administrative, and data maps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "overpy>=0.7",
    "requests>=2.32.5",
    "shapely>=2.0.4",
    "geojson>=3.1.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "huggingface-hub>=0.20.0",
    "orjson>=3.10.0",
]

[project.scripts]
xatra-install-data = "xatra.data_installer:main"
xatra-simplify-data = "xatra.simplify_data:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xatra"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
xatra = ["icons/**/*", "*.html"]
